--- a/src/static/top.html
+++ b/src/static/top.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet" type="text/css" href="style/common.css">
 <!--[if lte IE 8]>
-	<script type="text/javascript" src="http://css.gzedu.com/common/js/resetHTML5_forIE.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <![endif]-->
