--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <%- include('./common/head.html') %>
 <%- include('./index/index.html') %>
 <%- include('./common/foot.html') %>
-<%- include('./static/bottom.html') %>
-<script type="text/javascript" src="js/index.js"></script>
+<script data-main='js/index' src="https://cdn.bootcss.com/require.js/2.3.5/require.js"></script>
+<script src='js/config.js'></script>
 </body>
 
 </html>
