--- a/src/static/top.html
+++ b/src/static/top.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="style/common.css">
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <!--[if lte IE 8]>
 	<script type="text/javascript" src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 <![endif]-->
