bs样式全部引入，js按需引入

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -1,4 +1,33 @@
-<!-- 关于我们-->
-<section class="main">
-    <h2></h2>
-</section>
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>中新网8月31日电 据国家减灾办微信公众号消息，8月27日以来，华南部分地区持续遭受强降雨袭击。截至目前统计，福建、广东、广西3省(自治区)15市39个县(市、区)71.8万人受灾，直接经济损失4.5亿元。</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">了解详情 &raquo;</a></p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h2>标题一</h2>
+          <p>8月27日以来，华南部分地区持续遭受强降雨袭击，其中，30日，福建东部、广东中南部、广西中部和防城港等地出现暴雨或大暴雨，广东揭阳、汕头、汕尾、惠州、河源等地特大暴雨(250—450毫米)，惠州惠东和汕尾陆河等地500—666毫米，上述地区最大小时降雨量70—94毫米。强降雨导致广东多地出现城市内涝。</p>
+          <p><a class="btn btn-default" href="#" role="button">了解详情 &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>标题二</h2>
+          <p>截至目前统计：福建、广东、广西3省(自治区)15市39个县(市、区)71.8万人受灾，1.7万人紧急转移安置，1100余人需紧急生活救助；近600间房屋倒塌，1100余间不同程度损坏；农作物受灾面积15.6千公顷，其中绝收100余公顷；直接经济损失4.5亿元。 </p>
+          <p><a class="btn btn-default" href="#" role="button">了解详情 &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>标题三</h2>
+          <p>其中，福建省福州、厦门、莆田等5市20个县(市、区)2.8万人受灾，1.3万人紧急转移安置；100余间房屋倒塌，100余间不同程度损坏；农作物受灾面积1.5千公顷；直接经济损失近5000万元。</p>
+          <p><a class="btn btn-default" href="#" role="button">了解详情 &raquo;</a></p>
+        </div>
+      </div>
+
+      <hr>
+
+      <footer>
+        <p>@版权所有 备案号：xxxxxx</p>
+      </footer>
+    </div> <!-- /container -->
